Added code to get class probability

--- a/src/VGG.ipynb
+++ b/src/VGG.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import glob\n",
     "import os\n",
+    "import re\n",
     "\n",
     "from PIL import Image\n",
     "import torch\n",
@@ -1139,8 +1140,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b1fc88bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dinosaur: ['triceratops']\n",
+      "couch: ['studio couch']\n",
+      "mushroom: ['mushroom', 'agaric', 'gyromitra', 'stinkhorn', 'earthstar', 'hen-of-the-woods', 'bolete']\n",
+      "crab: ['Dungeness crab', 'rock crab', 'fiddler crab', 'king crab', 'hermit crab']\n",
+      "aquariumfish: ['goldfish', 'electric ray', 'jellyfish', 'spiny lobster', 'crayfish', 'starfish', 'gar', 'lionfish', 'puffer']\n",
+      "rose: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a mapping of class items to super class\n",
+    "classes = {\n",
+    "    'dinosaur': [51],\n",
+    "    'couch': [831],\n",
+    "    'mushroom': [947, 992, 993, 994, 995, 996, 997],\n",
+    "    'crab': [118, 119, 120, 121, 125],\n",
+    "    'aquariumfish': [1, 5, 107, 123, 124, 327, 395, 396, 397],\n",
+    "    'rose': []\n",
+    "}\n",
+    "\n",
+    "# Displaying the names of the classes in imagenet\n",
+    "for key, value in classes.items():\n",
+    "    print('{}: {}'.format(key, [categories[idx] for idx in value]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f9446db3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "crab8: 0.8769329786300659\n",
+      "couch1: 0.9948638081550598\n",
+      "rose3: 0\n",
+      "mushroom5: 0.9949149489402771\n",
+      "rose5: 0\n",
+      "rose6: 0\n",
+      "rose4: 0\n",
+      "mushroom4: 0.9563202261924744\n",
+      "rose7: 0\n",
+      "mushroom8: 0.17031770944595337\n",
+      "dinosaur8: 0.6551812291145325\n",
+      "mushroom3: 0.004325817339122295\n",
+      "aquariumfish8: 0.00932055339217186\n",
+      "couch7: 0.6438693404197693\n",
+      "couch6: 0.0946706160902977\n",
+      "rose2: 0\n",
+      "mushroom2: 0.029425349086523056\n",
+      "aquariumfish1: 0.9446033835411072\n",
+      "mushroom1: 0.9994685649871826\n",
+      "couch5: 0.6606698036193848\n",
+      "aquariumfish2: 5.184447218198329e-06\n",
+      "aquariumfish3: 0.037053097039461136\n",
+      "aquariumfish7: 0.09112440794706345\n",
+      "aquariumfish6: 1.0\n",
+      "couch4: 0.9201748967170715\n",
+      "aquariumfish4: 0.12555590271949768\n",
+      "aquariumfish5: 0.4784172475337982\n",
+      "couch8: 0.9397916793823242\n",
+      "dinosaur5: 0.7231609225273132\n",
+      "crab1: 0.9999968409538269\n",
+      "couch3: 0.9629864692687988\n",
+      "dinosaur4: 0.008940199390053749\n",
+      "dinosaur6: 0.02876937948167324\n",
+      "crab2: 0.9996355772018433\n",
+      "crab3: 0.9428169131278992\n",
+      "mushroom7: 0.9986101388931274\n",
+      "dinosaur7: 0.9971358776092529\n",
+      "dinosaur3: 0.9638633728027344\n",
+      "mushroom6: 0.7937138080596924\n",
+      "crab7: 0.010573510080575943\n",
+      "crab6: 0.9999994039535522\n",
+      "dinosaur2: 0.01374071929603815\n",
+      "crab4: 0.38245514035224915\n",
+      "couch2: 0.9946178793907166\n",
+      "crab5: 0.9991004467010498\n",
+      "dinosaur1: 0.9714267253875732\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Traversing each image and getting superclass probability\n",
+    "for label, path in basename_path_mapping.items():\n",
+    "    input_image = Image.open(path)\n",
+    "    preprocess = transforms.Compose([\n",
+    "        transforms.Resize(256),\n",
+    "        transforms.CenterCrop(224),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+    "    ])\n",
+    "    input_tensor = preprocess(input_image)\n",
+    "    input_batch = input_tensor.unsqueeze(0) # create a mini-batch as expected by the model\n",
+    "\n",
+    "    # move the input and model to GPU for speed if available\n",
+    "    if torch.cuda.is_available():\n",
+    "        input_batch = input_batch.to('cuda')\n",
+    "        model.to('cuda')\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        output = model(input_batch)\n",
+    "    # Tensor of shape 1000, with confidence scores over Imagenet's 1000 classes\n",
+    "    # print(output[0])\n",
+    "    # The output has unnormalized scores. To get probabilities, you can run a softmax on it.\n",
+    "    probabilities = torch.nn.functional.softmax(output[0], dim=0)\n",
+    "\n",
+    "    # Getting the class probability for the image\n",
+    "    image_class = re.sub(r'\\d', '', label)\n",
+    "    print('{}: {}'.format(label, sum([probabilities[idx] for idx in classes[image_class]])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0e5555b",
    "metadata": {},
    "outputs": [],
    "source": []
