--- a/src/ViT.ipynb
+++ b/src/ViT.ipynb
@@ -17,6 +17,7 @@
    "source": [
     "import glob\n",
     "import os\n",
+    "import re\n",
     "\n",
     "from PIL import Image\n",
     "import torch\n",
@@ -1296,11 +1297,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b1fc88bc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dinosaur: ['triceratops']\n",
+      "couch: ['studio couch']\n",
+      "mushroom: ['mushroom', 'agaric', 'gyromitra', 'stinkhorn', 'earthstar', 'hen-of-the-woods', 'bolete']\n",
+      "crab: ['Dungeness crab', 'rock crab', 'fiddler crab', 'king crab', 'hermit crab']\n",
+      "aquariumfish: ['goldfish', 'electric ray', 'jellyfish', 'spiny lobster', 'crayfish', 'starfish', 'gar', 'lionfish', 'puffer']\n",
+      "rose: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a mapping of class items to super class\n",
+    "classes = {\n",
+    "    'dinosaur': [51],\n",
+    "    'couch': [831],\n",
+    "    'mushroom': [947, 992, 993, 994, 995, 996, 997],\n",
+    "    'crab': [118, 119, 120, 121, 125],\n",
+    "    'aquariumfish': [1, 5, 107, 123, 124, 327, 395, 396, 397],\n",
+    "    'rose': []\n",
+    "}\n",
+    "\n",
+    "# Displaying the names of the classes in imagenet\n",
+    "for key, value in classes.items():\n",
+    "    print('{}: {}'.format(key, [categories[idx] for idx in value]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7888890c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "crab8: 0.9938910603523254\n",
+      "couch1: 0.683493971824646\n",
+      "rose3: 0\n",
+      "mushroom5: 0.9903771877288818\n",
+      "rose5: 0\n",
+      "rose6: 0\n",
+      "rose4: 0\n",
+      "mushroom4: 0.9803153872489929\n",
+      "rose7: 0\n",
+      "mushroom8: 0.996789813041687\n",
+      "dinosaur8: 0.3074803352355957\n",
+      "mushroom3: 0.6795634627342224\n",
+      "aquariumfish8: 0.14485429227352142\n",
+      "couch7: 0.9757304191589355\n",
+      "couch6: 0.8093156218528748\n",
+      "rose2: 0\n",
+      "mushroom2: 0.44311320781707764\n",
+      "aquariumfish1: 0.9505128264427185\n",
+      "mushroom1: 0.9929715394973755\n",
+      "couch5: 0.9808145761489868\n",
+      "aquariumfish2: 0.0011414405889809132\n",
+      "aquariumfish3: 0.306693971157074\n",
+      "aquariumfish7: 0.0014961115084588528\n",
+      "aquariumfish6: 0.9948068857192993\n",
+      "couch4: 0.9767090082168579\n",
+      "aquariumfish4: 0.16591893136501312\n",
+      "aquariumfish5: 0.15849505364894867\n",
+      "couch8: 0.994729220867157\n",
+      "dinosaur5: 0.9514707922935486\n",
+      "crab1: 0.9986653923988342\n",
+      "couch3: 0.07007555663585663\n",
+      "dinosaur4: 0.3790968656539917\n",
+      "dinosaur6: 0.8528656363487244\n",
+      "crab2: 0.9968419671058655\n",
+      "crab3: 0.9640384316444397\n",
+      "mushroom7: 0.9844620823860168\n",
+      "dinosaur7: 0.9997953772544861\n",
+      "dinosaur3: 0.9449316263198853\n",
+      "mushroom6: 0.9696320295333862\n",
+      "crab7: 0.2748800218105316\n",
+      "crab6: 0.99801105260849\n",
+      "dinosaur2: 0.06773445755243301\n",
+      "crab4: 0.7964689135551453\n",
+      "couch2: 0.944146454334259\n",
+      "crab5: 0.9977658987045288\n",
+      "dinosaur1: 0.9781614542007446\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Traversing each image and getting top 15 probabilities using ViT\n",
+    "for label, path in basename_path_mapping.items():\n",
+    "    input_image = Image.open(path)\n",
+    "    preprocess = transforms.Compose([\n",
+    "        transforms.Resize((384, 384)),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(0.5, 0.5),\n",
+    "    ])\n",
+    "    input_tensor = preprocess(input_image)\n",
+    "    input_batch = input_tensor.unsqueeze(0) # create a mini-batch as expected by the model\n",
+    "\n",
+    "    # move the input and model to GPU for speed if available\n",
+    "    if torch.cuda.is_available():\n",
+    "        input_batch = input_batch.to('cuda')\n",
+    "        model.to('cuda')\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        output = model(input_batch)\n",
+    "    # Tensor of shape 1000, with confidence scores over Imagenet's 1000 classes\n",
+    "    # print(output[0])\n",
+    "    # The output has unnormalized scores. To get probabilities, you can run a softmax on it.\n",
+    "    probabilities = torch.nn.functional.softmax(output[0], dim=0)\n",
+    "    \n",
+    "    # Getting the class probability for the image\n",
+    "    image_class = re.sub(r'\\d', '', label)\n",
+    "    print('{}: {}'.format(label, sum([probabilities[idx] for idx in classes[image_class]])))"
+   ]
   }
  ],
  "metadata": {
